create user management

--- a/src/components/header/navigation-list/NavigationMenu.scss
+++ b/src/components/header/navigation-list/NavigationMenu.scss
@@ -18,7 +18,7 @@
     }
   }
   .navigation-menu {
-    top: calc(50px - 5px);
+    top: 48px;
 
     & > li.is-have-nestedList {
       padding: 5px 0 5px 5px;
