--- a/src/components/common/table-management/TableManagement.scss
+++ b/src/components/common/table-management/TableManagement.scss
@@ -46,6 +46,10 @@
       background-color: #0038a8;
       color: #fff;
       font-size: 16px;
+
+      button {
+        padding-top: 0;
+      }
     }
 
     tr:nth-child(even) {
