--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -7,6 +7,8 @@
   background-color: $blue-01;
   position: relative;
   z-index: 999;
+  height: 60px;
+  padding: 0 10px;
 
   .left-content {
     display: flex;
