--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,6 @@ button.primary {
   background-color: $blue-02 !important;
 }
 
-// .App {
-//   margin-bottom: 150px;
-// }
+.App {
+  margin-bottom: 50px;
+}
