--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -1,13 +1,13 @@
-@import '../../variable/variable.scss';
+@import '../variable/variable.scss';
 
 .form-container {
   position: relative;
-  width: 80%;
+  width: 90%;
   margin: auto;
   border: 3px solid #115272;
   border-radius: 30px;
-  padding: 50px;
-  margin-top: 50px;
+  padding: 30px;
+  margin-top: 40px;
 
   .title {
     position: absolute;
@@ -22,7 +22,8 @@
     background-color: $blue-02;
     color: white;
     font-size: 20px;
-    margin: 20px 0;
+    margin-top: 20px;
+    margin-bottom: 30px;
     padding: 5px;
   }
 
@@ -46,8 +47,10 @@
       align-items: center;
     }
   }
-
-  .MuiTextField-root {
+  &.text-field-1-3 .MuiTextField-root {
     width: 33%;
+  }
+  &.text-field-1-4 .MuiTextField-root {
+    width: 24%;
   }
 }
