--- a/src/components/Form.scss
+++ b/src/components/Form.scss
@@ -17,6 +17,37 @@
     font-size: 30px;
     background-color: white;
   }
+  .step-circles-container {
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+    top: -20px;
+    left: 35%;
+    padding: 0 20px;
+
+    .step-circle {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      & > div:nth-child(1) {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 35px;
+        height: 35px;
+        color: white;
+        background-color: #b5b2b2;
+        border-radius: 50%;
+        font-size: 24px;
+
+        &.active {
+          background-color: $blue-02;
+        }
+      }
+    }
+  }
 
   .section-title {
     background-color: $blue-02;
@@ -25,6 +56,10 @@
     margin-top: 20px;
     margin-bottom: 30px;
     padding: 5px;
+
+    &.mt-50 {
+      margin-top: 50px;
+    }
   }
 
   .information-fields {
