feature: market-management 65%

--- a/src/components/header/navigation-list/NavigationMenu.scss
+++ b/src/components/header/navigation-list/NavigationMenu.scss
@@ -1,5 +1,13 @@
 .navigation-container {
   position: relative;
+  display: flex;
+  align-items: center;
+
+  button {
+    img {
+      width: 90%;
+    }
+  }
 
   ul {
     position: absolute;
