--- a/src/components/common/progress-circle/ProgressCircle.scss
+++ b/src/components/common/progress-circle/ProgressCircle.scss
@@ -4,7 +4,7 @@
   position: absolute;
   display: flex;
   justify-content: space-between;
-  gap: 50%;
+  width: 200px;
   top: -20px;
   left: 50%;
   transform: translateX(-50%);
