--- a/src/modules/StallApplicationForm/Layouts/Layout.scss
+++ b/src/modules/StallApplicationForm/Layouts/Layout.scss
@@ -2,7 +2,7 @@
 
   width: 90%;
   padding: 30px 10px;
-  margin: 10px;
+  margin: 20px;
   border: 2px solid black;
   border-radius: 20px;
   position: relative;
@@ -10,13 +10,13 @@
 
   .stall-modal-title {
     position: absolute;
-    top: -14px;
+    top: -18px;
     left: 40px;
 
     background-color: white;
     padding: 0 15px;
 
-    font-size: larger;
+    font-size: 24px;
     text-transform: uppercase;
   }
 
@@ -25,11 +25,12 @@
     &__company-name {
       color: #0038A8;
       font-weight: bold;
-      font-size: large;
+      font-size: 24px;
     }
     &__sologan {
       color:  #212529;
-      font-size: 10px;
+      font-size: 18px;
+      font-weight: 100;
     }
   }
 }
