--- a/src/components/role-management/RoleManagement.scss
+++ b/src/components/role-management/RoleManagement.scss
@@ -1,4 +1,4 @@
-@import '../../variable/variable.scss';
+@import '../../style/variable.scss';
 
 .role-management-container {
   position: relative;
