--- a/src/components/login/Login.scss
+++ b/src/components/login/Login.scss
@@ -1,28 +1,26 @@
 @import '../../style/variable.scss';
 
 .login-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
+  position: relative;
+  width: 100%;
+  height: 100vh;
 
   & > img {
+    object-fit: contain;
     width: 100%;
-    height: auto;
-    max-height: 100%;
+    height: 100%;
   }
   .login-form {
+    position: absolute;
     width: 400px;
     height: 300px;
     border-radius: 5px;
     text-align: center;
-    position: absolute;
-    top: calc(50% - 150px);
-    left: calc(50% - 200px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     background-color: white;
+
     .login__title {
       background-color: $blue-01;
       padding: 15px 0;
