check-api-floors-and-stall

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,6 +4,11 @@ button.primary {
   background-color: $blue-02 !important;
 }
 
+img.dialog-icon {
+  width: 70px;
+  height: 70px;
+}
+
 .container {
   position: relative;
   width: 90%;
