add select search component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -82,6 +82,7 @@ img.dialog-icon {
     display: flex;
     justify-content: space-between;
     padding: 20px;
+    height: 40px;
 
     .search-field {
       display: flex;
