--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -50,6 +50,19 @@ img.dialog-icon {
     }
   }
 
+  .section-subtitle {
+    background-color: #cfd5ea;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    padding: 5px;
+    width: 100%;
+
+    &.first-subtitle {
+      margin-top: 0;
+    }
+  }
+
   .information-fields {
     display: flex;
     align-items: center;
