finished UI of step 1 form

--- a/src/modules/StallApplicationForm/Layouts/Layout.scss
+++ b/src/modules/StallApplicationForm/Layouts/Layout.scss
@@ -1,7 +1,7 @@
 .stall-modal-layout {
 
   width: 90%;
-  padding: 30px 10px;
+  padding: 30px 10px 0 10px;
   margin: 20px;
   border: 2px solid black;
   border-radius: 20px;
