--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -93,8 +93,8 @@ img.dialog-icon {
     background-color: #f4f4f4;
     display: flex;
     justify-content: space-between;
-    padding: 20px;
-    height: 40px;
+    padding: 15px;
+    min-height: 75px;
 
     .search-field {
       display: flex;
